Visual & doc improvements.

--- a/browser-test.html
+++ b/browser-test.html
@@ -13,7 +13,8 @@
       
       StarkPlayer({
         package: 'stark-player',
-        pod: 0
+        pod: 0,
+        arg: {}
       });
     </script>
   </body>
