--- a/standalone/index.html
+++ b/standalone/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style>
       /* @import './browser-test.css'; */
+      body
+      {
+        overscroll-behavior-y: contain;
+      }
     </style>
     <script type="module">
       if ('serviceWorker' in navigator) { 
