--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module">
       if ('serviceWorker' in navigator) { 
         try {
-          await navigator.serviceWorker.register('./sw.js', { scope: '/' }); 
+          await navigator.serviceWorker.register('./sw.js', { scope: './' }); 
         } catch (e) {
           alert('Offline install failed!'); 
         }
