--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         }
       }
     </script>
+    <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./manifest.json">
   </head>
   <body>
